[gd_scene load_steps=7 format=3 uid="uid://dmdc60cjuki5p"]

[ext_resource type="PackedScene" uid="uid://w3ux0r6664nr" path="res://scenes/common/buttons/cirular_button/circular_button.tscn" id="1_r5ntm"]
[ext_resource type="Script" path="res://scenes/battlefields/common/base_battlefield/gui/efficiency_up_button/efficiency_up_button.gd" id="2_dduux"]
[ext_resource type="AudioStream" uid="uid://bjx4lj64ekakc" path="res://resources/sound/battlefield/efficiency_up.mp3" id="3_7gvxd"]

[sub_resource type="InputEventAction" id="InputEventAction_thrpy"]
action = &"ui_upgrade_efficiency"

[sub_resource type="Shortcut" id="Shortcut_yykbv"]
events = [SubResource("InputEventAction_thrpy")]

[sub_resource type="LabelSettings" id="LabelSettings_3a7e3"]
font_size = 74
outline_size = 24
outline_color = Color(0.0196078, 0, 0.721569, 1)

[node name="EfficiencyUpButton" instance=ExtResource("1_r5ntm")]
focus_mode = 0
shortcut = SubResource("Shortcut_yykbv")
script = ExtResource("2_dduux")

[node name="EfficiencyLevelLabel" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -122.5
offset_right = 175.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
text = "LV.1"
label_settings = SubResource("LabelSettings_3a7e3")

[node name="UpgradePriceLabel" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 86.5
offset_right = 175.0
offset_bottom = 207.5
grow_horizontal = 2
grow_vertical = 2
text = "40â‚µ"
label_settings = SubResource("LabelSettings_3a7e3")
horizontal_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("3_7gvxd")
volume_db = -5.0
bus = &"SoundFX"
